[gd_scene load_steps=8 format=3 uid="uid://7cd38ochgsag"]

[ext_resource type="Script" path="res://fireBarrel.gd" id="1_5r343"]
[ext_resource type="Texture2D" uid="uid://bae1q8pyy66oi" path="res://Assets/environmental stuff/barrelParts/redbarrel.png" id="2_jmp2i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ajw46"]
radius = 88.0227

[sub_resource type="Curve" id="Curve_4ecbb"]
min_value = -1.0
max_value = 360.0
_data = [Vector2(0, 333.4), 0.0, 44.4599, 0, 0, Vector2(1, 128.2), -537.912, 488.188, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_vhgj1"]
min_value = 0.99
max_value = 30.57
_data = [Vector2(0, 20.9176), 0.0, 197.615, 0, 0, Vector2(0.4, -5), 189.937, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_0mb7r"]
_data = [Vector2(0, 0.115789), 0.0, 1.0386, 0, 0, Vector2(0.223214, 1), 3.42966, 3.42966, 0, 0, Vector2(1, 0), -1.61684, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_5pmq4"]
offsets = PackedFloat32Array(0.108738, 0.345631, 0.714563, 1)
colors = PackedColorArray(1, 0.945098, 0, 1, 1, 0.407843, 0.105882, 1, 0.670588, 0.329412, 0, 0.756863, 0.450648, 0.450648, 0.450648, 0.235294)

[node name="fireBarrel" type="Node2D"]
script = ExtResource("1_5r343")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(11, -10.8, 12, -9.3, 12, 8.5, 11, 13.5, -11, 13.5, -11, 10.8, -12, 9.3, -12, -8.5, -11, -10.5, -11, -13.5, 11, -13.5)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_jmp2i")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_ajw46")

[node name="fireExplosion" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(0, 2)
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
local_coords = true
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, -50)
initial_velocity_max = 1.0
angular_velocity_max = 5.13
angular_velocity_curve = SubResource("Curve_4ecbb")
linear_accel_min = -4.26
linear_accel_max = 57.66
linear_accel_curve = SubResource("Curve_vhgj1")
scale_amount_min = 14.0
scale_amount_max = 19.68
scale_amount_curve = SubResource("Curve_0mb7r")
color_ramp = SubResource("Gradient_5pmq4")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
